tests/baselines/reference/parser.numericSeperators.hexNegative.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/1.ts(1,5): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/2.ts(1,3): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/2.ts(1,3): error TS2304: Cannot find name '_110'.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/3.ts(1,2): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/3.ts(1,2): error TS2304: Cannot find name '_X0101'.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/4.ts(1,5): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/4.ts(1,6): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/4.ts(1,6): error TS2304: Cannot find name '_11'.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/5.ts(1,12): error TS6188: Numeric seperators are not allowed at the end of a literal.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/5.ts(1,13): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/5.ts(1,13): error TS2304: Cannot find name '_'.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/6.ts(1,3): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeperators/6.ts(1,3): error TS2304: Cannot find name '___0111010_0101_1'.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/1.ts (1 errors) ====
    0x00_
        ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/2.ts (2 errors) ====
    0x_110
      
!!! error TS1125: Hexadecimal digit expected.
      ~~~~
!!! error TS2304: Cannot find name '_110'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/3.ts (2 errors) ====
    0_X0101
     ~~~~~~
!!! error TS1005: ';' expected.
     ~~~~~~
!!! error TS2304: Cannot find name '_X0101'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/4.ts (3 errors) ====
    0x01__11
        ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
         ~~~
!!! error TS1005: ';' expected.
         ~~~
!!! error TS2304: Cannot find name '_11'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/5.ts (3 errors) ====
    0X0110_0110__
               ~
!!! error TS6188: Numeric seperators are not allowed at the end of a literal.
                ~
!!! error TS1005: ';' expected.
                ~
!!! error TS2304: Cannot find name '_'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeperators/6.ts (2 errors) ====
    0x___0111010_0101_1
      
!!! error TS1125: Hexadecimal digit expected.
      ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name '___0111010_0101_1'.
    